# orders-fastapi

./: .gitignore  asgi.py  http-client.private.env.json  menu-request.http  order-request.http  pyproject.toml  requirements.txt  test.py  user-request.http  vercel.json
.github/workflows/: dep.yml
app/: main.py
app/api/v1/: __init__.py  order_router.py  user_router.py
app/api/v1/routers/: client_router.py  menu_router.py  user_router.py
app/clients/grab/: grab_client.py  grab_merchant_model.py
app/clients/grab/dto/: grab_dto.py
app/common/annotation/: fastapi_params.py  model_fields.py  openapi_examples.py
app/common/settings/: config.py
app/documents/: order_document.py  user_document.py
app/models/: order_model.py  user.py  user_model.py
app/orderdnu/auth/: auth_model.py  auth_service.py  openapi_examples.py
app/orderdnu/auth/v1/: __init__.py  auth_router.py
app/orderdnu/bill/: bill_document.py  bill_enum.py
app/orderdnu/client/v1/: __init__.py  client_router.py  grab_router.py
app/orderdnu/home/: home_model.py  home_service.py  user_model.py  user_service.py
app/orderdnu/home/v1/: __init__.py  home_router.py  user_router.py
app/orderdnu/menu/: menu_model.py  menu_service.py
app/orderdnu/merchant/: merchant_document.py  merchant_enum.py  merchant_model.py  merchant_service.py  openapi_examples.py
app/orderdnu/order/: order_document.py  order_model.py  order_service.py
app/orderdnu/user/: openapi_examples.py  user_document.py  user_model.py  user_service.py
app/services/: menu_service.py  user_service.py
(+12 files in other folders)
